--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -23,7 +23,7 @@ v.1
     .body{
          width: 100%;    
          height: 1000px;
-         background-image: url("C:Users/Administrator/Desktop/4.png");
+         background-image: url(" ../static/bj.jpg");
         
     }
     .top{
